cabal-version:      3.0
name:               sgp4
version:            0.1.0.0
synopsis:           SGP4/SDP4
description:
    Haskell code for SGP4/SDP4
    .


homepage:           https://github.com/TravisWhitaker/sgp4
bug-reports:        https://github.com/TravisWhitaker/sgp4
license:            MIT
license-file:       LICENSE
author:             Travis Whitaker
maintainer:         pi.boy.travis@gmail.com

copyright:          Travis Whitaker 2025
category:           Math

common common
    default-language: Haskell2010
    ghc-options: -O2
                 -Weverything
                 -Wcompat
                 -- -Werror
                 -Wno-unsafe
                 -Wno-type-defaults
                 -Wno-missing-safe-haskell-mode
                 -Wno-implicit-prelude
                 -Wno-missing-import-lists
                 -Wno-prepositive-qualified-module
                 -Wno-missing-kind-signatures
                 -Wno-monomorphism-restriction
                 -Wno-missing-role-annotations
                 -Wno-missed-specialisations
                 -Wno-all-missed-specialisations
                 -Wno-error=missing-local-signatures

library tle
    import:           common
    exposed-modules:  Data.SGP4.TLE
    --other-modules:
    build-depends:    base >=4.14 && <5
                    , attoparsec
                    , bytestring
                    , linear-geo
                    , time
    hs-source-dirs:   tle
    ghc-options:
      -optc-Wall
      -optc-Wextra
      -optc-Werror
      -optc-std=c99
      -optc-Wno-dangling-else
      -optc-Wno-format

library sgp4c
    import:           common
    exposed-modules:  Data.SGP4.C
    --other-modules:
    build-depends:    base >=4.14 && <5
                    , containers
                    , linear
                    , linear-geo
                    , time
                    , sgp4:tle
    hs-source-dirs:   sgp4c
    c-sources: cbits/SGP4.c
    include-dirs: cbits
    ghc-options:
      -optc-Wall
      -optc-Wextra
      -- -optc-Werror
      -optc-std=c99
      -optc-Wno-dangling-else
      -optc-Wno-format

library
    import:           common
    exposed-modules:  Data.SGP4
    --other-modules:
    build-depends:    base >=4.14 && <5
                    , containers
                    , linear
                    , linear-geo
                    , time
                    , sgp4:tle
                    , sgp4:sgp4c
    hs-source-dirs:   src

test-suite iss
     import:           common
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test-iss
     main-is:          Main.hs
     build-depends:    base >=4.14 && <5
                     , attoparsec
                     , iers
                     , linear-geo
                     , time
                     , sgp4:sgp4c
                     , sgp4:tle
     ghc-options:      -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -Wno-all-missed-specialisations

-- test-suite roundtrip
--     import:           common
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          RoundTrip.hs
--     build-depends:    base >=4.14 && <5
--                     , async
--                     , attoparsec
--                     , bytestring
--                     , containers
--                     , directory
--                     , filepath
--                     , serialise
--                     , iers
--     ghc-options:      -threaded
--                       -rtsopts
--                       "-with-rtsopts=-N"
--                       -Wno-all-missed-specialisations
